# SummEval

./: .gitignore  LICENSE  README.md
data_processing/: pair_data.py
evaluation/: README.md  pyproject.toml  setup.py  setup_finalize.py
evaluation/examples/: basic.config
evaluation/summ_eval/: __init__.py  bert_score_metric.py  blanc_metric.py  bleu_metric.py  calc_scores.py  chrfpp_metric.py  cider_metric.py  cider_utils.py  data_stats_metric.py  data_stats_utils.py  meteor_metric.py  metric.py  mover_score_metric.py  rouge_metric.py  rouge_we_metric.py  s3_metric.py  s3_utils.py  sentence_movers_metric.py  sentence_movers_utils.py  summa_qa_metric.py  summa_qa_utils.py  supert_metric.py  supert_utils.py  syntactic_metric.py  syntactic_utils.py  test_util.py
evaluation/summ_eval/examples/: stopwords.txt
evaluation/summ_eval/models/en/: svr.pyr_score.en.pkl  svr.responsiveness.en.pkl
evaluation/summ_eval/sentence_transformers/: SentenceTransformer.py  __init__.py  datasets.py  util.py
evaluation/summ_eval/sentence_transformers/evaluation/: EmbeddingSimilarityEvaluator.py
evaluation/summ_eval/sentence_transformers/losses/: test_batch_hard_triplet_loss.py
evaluation/summ_eval/sentence_transformers/models/: AbstractModel.py  BERT.py  RoBERTa.py  XLNet.py
evaluation/tests/: test_bert_score.py  test_bleu.py  test_chrfpp.py  test_cider.py  test_data_stats.py  test_meteor.py  test_mover_score.py  test_rouge.py  test_rouge_we.py  test_s3_metric.py  test_sentence_movers.py  test_summaqa.py  test_syntactic.py
